--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     "php": ">=5.5"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.4.*"
+    "phpunit/phpunit": "5.4.*",
+    "ext-sqlite3": "*",
+    "ext-pdo_sqlite": "*"
   },
   "autoload": {
     "psr-4": {
